--- a/index.html
+++ b/index.html
@@ -160,6 +160,282 @@
             </div>
         </div>
     <!-- end articles -->
+    <!-- start gallery -->
+        <div class="gallery" id="gallery">
+            <h2 class="main-title">gallery</h2>
+            <div class="container">
+                <div class="box">
+                    <div class="image">
+                        <img src="imgs/gallery-01.png" alt="">
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="imgs/gallery-02.png" alt="">
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="imgs/gallery-03.jpg" alt="">
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="imgs/gallery-04.png" alt="">
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="imgs/gallery-05.jpg" alt="">
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image">
+                        <img src="imgs/gallery-06.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!-- end gallery -->
+
+    <!-- start features -->
+        <div class="features" id="features">
+            <h2 class="main-title">features</h2>
+            <div class="container">
+                <div class="box quality">
+                    <div class="img-holder">
+                        <img src="imgs/features-01.jpg" alt="">
+                    </div>
+                    <h2>Quality</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                    <a href="#">More</a>
+                </div>
+                <div class="box time">
+                    <div class="img-holder">
+                        <img src="imgs/features-02.jpg" alt="">
+                    </div>
+                    <h2>Time</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing. adipisicing.</p>
+                    <a href="#">More</a>
+                </div>
+                <div class="box passion">
+                    <div class="img-holder">
+                        <img src="imgs/features-03.jpg" alt="">
+                    </div>
+                    <h2>Passion</h2>
+                    <p>Lorem ipsum dolor, sit amet consectlorem5 Lorem ipsum dolor sit amet consectetur adipisicing. etur adipisicing.</p>
+                    <a href="#">More</a>
+                </div>
+                
+            </div>
+        </div>
+    <!-- end features -->
     
+    <!-- start testimonials -->
+        <div class="testimonials" id="testimonials">
+            <h2 class="main-title">Testimonials</h2>
+            <div class="container">
+                <div class="box">
+                    <img src="imgs/avatar-01.png" alt="">
+                    <h3>Sahl Abdelrahman</h3>
+                    <span class="title">Full Stack Web Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quia! Quas adipisci blanditiis earum molestias ab, quaerat quia illo aperiam dolor amet distinctio reprehenderit, labore maiores! Ad ipsa repellat ea!</p>
+                </div>
+                <div class="box">
+                    <img src="imgs/avatar-02.png" alt="">
+                    <h3>Ahmed Dawood</h3>
+                    <span class="title">Full Stack Web Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quia! Quas adipisci blanditiis earum molestias ab, quaerat quia illo aperiam dolor amet distinctio reprehenderit, labore maiores! Ad ipsa repellat ea!</p>
+                </div>
+                <div class="box">
+                    <img src="imgs/avatar-03.png" alt="">
+                    <h3>Hamdy Mohamed</h3>
+                    <span class="title">Full Stack Web Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quia! Quas adipisci blanditiis earum molestias ab, quaerat quia illo aperiam dolor amet distinctio reprehenderit, labore maiores! Ad ipsa repellat ea!</p>
+                </div>
+                <div class="box">
+                    <img src="imgs/avatar-04.png" alt="">
+                    <h3>Sahl Abdelrahman</h3>
+                    <span class="title">Full Stack Web Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quia! Quas adipisci blanditiis earum molestias ab, quaerat quia illo aperiam dolor amet distinctio reprehenderit, labore maiores! Ad ipsa repellat ea!</p>
+                </div>
+                <div class="box">
+                    <img src="imgs/avatar-05.png" alt="">
+                    <h3>Asem Dawood</h3>
+                    <span class="title">Full Stack Web Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quia! Quas adipisci blanditiis earum molestias ab, quaerat quia illo aperiam dolor amet distinctio reprehenderit, labore maiores! Ad ipsa repellat ea!</p>
+                </div>
+                <div class="box">
+                    <img src="imgs/avatar-06.png" alt="">
+                    <h3>Seaf Warda</h3>
+                    <span class="title">Full Stack Web Developer</span>
+                    <div class="rate">
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                        <i class="filled fas fa-star"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quia! Quas adipisci blanditiis earum molestias ab, quaerat quia illo aperiam dolor amet distinctio reprehenderit, labore maiores! Ad ipsa repellat ea!</p>
+                </div>
+            </div>
+        </div>
+    <!-- End testimonials -->
+
+    <!-- Start Team -->
+        <div class="team" id="team">
+            <h2 class="main-title">Team Members</h2>
+            <div class="container">
+                <div class="box">
+                    <div class="date">
+                        <img src="imgs/team-01.jpg" alt="team">
+                        <div class="social">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Games</h3>
+                        <p>hello how are you</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="date">
+                        <img src="imgs/team-02.jpg" alt="team">
+                        <div class="social">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Games</h3>
+                        <p>hello how are you</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="date">
+                        <img src="imgs/team-03.jpg" alt="team">
+                        <div class="social">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Games</h3>
+                        <p>hello how are you</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="date">
+                        <img src="imgs/team-04.jpg" alt="team">
+                        <div class="social">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Games</h3>
+                        <p>hello how are you</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="date">
+                        <img src="imgs/team-05.png" alt="team">
+                        <div class="social">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Games</h3>
+                        <p>hello how are you</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="date">
+                        <img src="imgs/team-06.png" alt="team">
+                        <div class="social">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Games</h3>
+                        <p>hello how are you</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="date">
+                        <img src="imgs/team-07.jpg" alt="team">
+                        <div class="social">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Games</h3>
+                        <p>hello how are you</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="date">
+                        <img src="imgs/team-08.jpg" alt="team">
+                        <div class="social">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                    <div class="info">
+                        <h3>Games</h3>
+                        <p>hello how are you</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!-- End Team -->
 </body>
 </html>
