I have created some sections and fixed an issue I was struggling with: when the screen size got smaller, the navbar caused a scrollbar to appear at the bottom. The solution was simple  I just removed the padding.

--- a/index.html
+++ b/index.html
@@ -437,5 +437,163 @@
             </div>
         </div>
     <!-- End Team -->
+    <!-- start services -->
+        <div class="services" id="services">
+            <h2 class="main-title">services</h2>
+
+            <div class="container">
+
+                <div class="box">
+                    <i class="fas fa-user-shield fa-4x"></i>
+                    <h3>Security</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-tools fa-4x"></i>
+                    <h3>Fixing Issues</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-map-marker-alt fa-4x"></i>
+                    <h3>Location</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-laptop-code fa-4x"></i>
+                    <h3>Coding</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-palette fa-4x"></i>
+                    <h3>Security</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-bullhorn fa-4x"></i>
+                    <h3>Marketing</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    <!-- end services -->
+
+    <!-- start Skills -->
+        <div class="our-skills" id="our-skills">
+            <h2 class="main-title">Our Skills</h2>
+            <div class="container">
+                <img src="imgs/skills.png" alt="picture of skills" >
+                <div class="skills">
+                    <div class="skill">
+                        <h3>Html <span>95%</span></h3>
+                        <div class="the-progress">
+                            <span style="width: 95%;"></span>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <h3>Css <span>90%</span></h3>
+                        <div class="the-progress">
+                            <span style="width: 90%;"></span>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <h3>Java Script <span>80%</span></h3>
+                        <div class="the-progress">
+                            <span style="width: 80%;"></span>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <h3>Python <span>60%</span></h3>
+                        <div class="the-progress">
+                            <span style="width: 60%;"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!-- End Skills -->
+    <!-- Start Work Steps -->
+        <div class="work-steps" id="work-steps">
+            <h2 class="main-title">How it Works ?</h2>
+            <div class="container">
+                <div class="image">
+                    <img src="imgs/work-steps.png" alt="">
+                </div>
+                <div class="steps">
+                    <div class="box">
+                        <img src="imgs/work-steps-1.png" alt="">
+                        <div class="text">
+                            <h3>Architecture</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, quisquam alias commodi quaerat distinctio doloremque ut tempora suscipit aperiam doloribus asperiores, in eveniet, ullam eius expedita tenetur nobis quo et!</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="imgs/work-steps-2.png" alt="">
+                        <div class="text">
+                            <h3>Developement</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, quisquam alias commodi quaerat distinctio doloremque ut tempora suscipit aperiam doloribus asperiores, in eveniet, ullam eius expedita tenetur nobis quo et!</p>
+                        </div>
+                        </div>
+                    <div class="box">
+                        <img src="imgs/work-steps-3.png" alt="">
+                        <div class="text">
+                            <h3>Business Analysis</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, quisquam alias commodi quaerat distinctio doloremque ut tempora suscipit aperiam doloribus asperiores, in eveniet, ullam eius expedita tenetur nobis quo et!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!-- End Work steps -->
+    <!-- start Events -->
+        <div class="events" id="events">
+            <div class="main-title">Latest Events</div>
+            <div class="container">
+                <img src="imgs/events.png" alt="">
+                <div class="info">
+                    <div class="time">
+                        <div class="unit">
+                            <span>15</span>
+                            <span>Days</span>
+                        </div>
+                        <div class="unit">
+                            <span>08</span>
+                            <span>Hours</span>
+                        </div>
+                        <div class="unit">
+                            <span>20</span>
+                            <span>Minutes</span>
+                        </div>
+                        <div class="unit">
+                            <span>30</span>
+                            <span>seconds</span>
+                        </div>
+                    </div>
+                    <h2 class="title">Tech master Event 2025</h2>
+                    <p class="description">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis vero animi assumenda vel aliquam eaque eligendi impedit molestias fugit ipsam sapiente omnis dolorum, autem magni officia iure optio quam. Nam!
+                    </p>
+                </div>
+                <div class="subscribe">
+                    <form action="">
+                        <input type="email" placeholder="Enter Your Email">
+                        <input type="submit" value="subscribe">
+                    </form>
+                </div>
+            </div>
+        </div>
+    <!-- End Events -->
 </body>
 </html>
